--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body, html {
     margin: 0;
     padding: 0;
     overflow-x: hidden; 
-    background-color: black;/* Oculta la barra de desplazamiento horizontal */
+    background-color: rgb(253, 253, 253);/* Oculta la barra de desplazamiento horizontal */
   }
 
   .espacio{
@@ -13,7 +13,7 @@ body, html {
   
   .contenedor-imagen {
     min-height: 100%; /* Establece la altura mínima del contenedor al 100% de la ventana */
-    display: flex;
+    
     justify-content: center;
     align-items: center;
   }
